<resources>
    <string name="app_name" translatable="false">GreenKiwi</string>
    <string name="title_home">Kiwi</string>
    <string name="title_activities">Activities</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="subtitle_activity_history">Previously added</string>
    <string name="activity_point_info">This activity gives you %d point(s)</string>
    <string name="activity_gold_info">This activity gives you %d gold</string>
    <string name="activity_added_message">Great job, activity added!</string>
    <string name="third_activity_added_message">Congrats! You\'ve just added the third activity today, which earned you %d extra gold!</string>
    <string name="activity_already_added_today_message">You\'ve already added this activity today, check back tomorrow!</string>
    <string name="level_info">Level %d</string>
    <string name="exp_info">%d/%d EXP</string>
    <string name="daily_activity_count_info">Daily activities: %d/%d</string>
    <string name="hunger_info">%d/%d</string>
    <string name="gold_formatter">#,###</string>
    <string name="gold_info">Gold: %s</string>
    <string name="last_added_date_default">Haven\'t added yet</string>
    <string name="pet_nickname_hint">Give a nickname to your kiwi</string>
    <string name="pet_nickname_button_text">Set nickname</string>
    <string name="pet_nickname_text">Your kiwi, %s, loves you!</string>
    <string name="feed_pet_button_text">Feed kiwi</string>
    <string name="feed_pet_dialog_title">Feed your kiwi</string>
    <string name="feed_pet_dialog_text">You can buy some delicious kiwi food for %d golds to make %s happy</string>
    <string name="feed_pet_dialog_text_default_nickname">your kiwi</string>
    <string name="feed_pet_dialog_positive_button_text">Buy</string>
    <string name="feed_pet_dialog_negative_button_text">Cancel</string>
    <string name="feed_pet_toast_message">Sorry, you don\'t have enough gold</string>

    <!--Instructions dialog related-->
    <string name="instructions_title">Welcome to GreenKiwi!</string>
    <string name="instructions_dismiss">Got it!</string>
    <string name="instructions_first_page">This app was created with the purpose to help people live a more environment-friendly life with the help of a virtual pet.
        \nYou can choose from a long list of green activities, and once completing one, you can mark it done to get points and gold.
        \nThe more points you collect, the faster your pet grows, so be enthusiastic and diligent, and it will grow up in no time!</string>
    <string name="instructions_second_page">Use your collected gold to purchase new colors and backgrounds for your kiwi, and also to feed it when it\'s hungry.
        \nIf you want to start the game over, you can reset it from the \'Settings\' menu.
        \nYou can also access these instructions later from the \'Settings\' menu if you need.</string>

    <!--Activities view category Chip names-->
    <string name="water_and_energy">Water and energy</string>
    <string name="less_waste">Less waste</string>
    <string name="food_and_eating_habits">Food and eating habits</string>
    <string name="transportation">Transportation</string>
    <string name="better_materials">Better materials</string>
    <string name="other">Other</string>

    <!--Settings tab-->
    <string name="view_instructions_label">Open Instructions</string>
    <string name="view_instructions_button_text">Open</string>
    <string name="night_mode_toggle_text">Toggle night mode on/off</string>
    <string name="reset_progress_label">Reset player progress</string>
    <string name="reset_progress_button_text">Reset</string>
    <string name="reset_dialog_title">Reset progress</string>
    <string name="reset_dialog_text">Are you sure you want to reset all your progress? This cannot be undone later!</string>
    <string name="reset_dialog_positive_button_text">Do it</string>
    <string name="reset_dialog_negative_button_text">No way</string>

    <!--Notifications-->
    <string name="notification_title">Take care of your kiwi</string>
    <string name="pet_hunger_channel_id" translatable="false">hungry_kiwi_channel</string>
    <string name="pet_hunger_channel_name" translatable="false">HungryKiwiAlert</string>
    <string name="pet_hunger_text">Watch out, your kiwi is hungry! And a Hungry Kiwi\.\.\.</string>
    <string name="pet_hunger_bigtext">Watch out, your kiwi is hungry! And a Hungry Kiwi equals an Angry Kiwi, so hurry and feed it! It\'ll be very grateful.</string>

    <!--History-->
    <string name="daily_activity_count_info_incomplete">Activities added today: %d/%d\nAdd %d more to get %d bonus gold!</string>
    <string name="daily_activity_count_info_completed">Congrats! You\'ve added %d activities today!</string>
    <string name="activity_history_header_text">Your previously added activities:</string>

    <!--Shop-->
    <string name="shop_title">Shop</string>
    <string name="background">Background</string>
    <string name="pet_image">Pet Image</string>
    <string name="default_wallpaper_name">Default Background</string>
    <string name="kiwi_wallpaper_name">Kiwi Background</string>
    <string name="orange_wallpaper_name">Orange Background</string>
    <string name="doughnut_wallpaper_name">Doughnut Background</string>
    <string name="green_kiwi_name">Green Kiwi Image</string>
    <string name="brown_kiwi_name">Brown Kiwi Image</string>
    <string name="dark_blue_kiwi_name">Dark Blue Kiwi Image</string>
    <string name="dark_pink_kiwi_name">Dark Pink Kiwi Image</string>
    <string name="light_blue_kiwi_name">Light Blue Kiwi Image</string>
    <string name="light_pink_kiwi_name">Light Pink Kiwi Image</string>
    <string name="purple_kiwi_name">Purple Kiwi Image</string>
    <string name="red_kiwi_name">Red Kiwi Image</string>
    <string name="teal_kiwi_name">Teal Kiwi Image</string>
    <string name="yellow_kiwi_name">Yellow Kiwi Image</string>
    <string name="shop_item_dialog_positive_button_text_buy">Buy item</string>
    <string name="shop_item_dialog_positive_button_text_use">Use item</string>
    <string name="shop_item_dialog_negative_button_text">Cancel</string>
    <string name="shop_item_dialog_message_currently_used">This is the currently used %s.</string>
    <string name="shop_item_dialog_message_buy">Do you want to buy this %s for %d gold?</string>
    <string name="shop_item_dialog_message_buy_not_enough_gold">You don\'t have enough gold (%d) to buy this %s, check out the activities first and earn some more!</string>
    <string name="shop_item_dialog_message_use">Do you want to set this %s as the current one?</string>

    <!--Accessibility-->
    <string name="gold_coin_description">Image of a gold coin</string>
    <string name="home_view_pet_description">Image of your pet kiwi</string>
    <string name="activities_view_activity_image_description">This image shows the corresponding activity</string>
    <string name="shop_view_item_description">This is the image of the actual item</string>
    <string name="shop_view_purchase_status_description">This icon represents whether the item is purchasable or already purchased</string>
    <string name="activity_detail_view_history_description">A history icon</string>
    <string name="activity_detail_view_points_description">A points icon</string>
</resources>