<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!--Shared Preferences related values-->
    <string name="preference_file_key">com.szte.wmm.greenkiwi.PREFERENCE_FILE_KEY</string>
    <string name="saved_user_points_key">savedUserPointsKey</string>
    <string name="returning_user_key">isReturningUser</string>
    <string name="hunger_timer_key">hungerTimerKey</string>
    <string name="saved_user_gold_key">savedUserGoldKey</string>
    <string name="last_saved_activity_date_key">lastSavedActivityDateKey</string>
    <string name="daily_activity_counter_key">dailyActivityCounterKey</string>
    <string name="night_mode_setting_key">nightModeSettingKey</string>
    <string name="pet_nickname_key">petNicknameKey</string>
    <string name="current_background_key">currentBackgroundKey</string>
    <string name="current_pet_image_key">currentPetImageKey</string>
</resources>