...
            app:navigationIcon="@drawable/ic_baseline_arrow_back_black_24dp"
            app:title="@string/shop_title"
            app:titleTextColor="@color/secondaryTextColor"
            app:titleTextAppearance="@style/TextAppearance.GreenKiwi.Toolbar.Text"/>

        <HorizontalScrollView
            android:id="@+id/shop_categories"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

...
                android:paddingTop="@dimen/zero_padding"
                android:paddingEnd="@dimen/small_padding"
                android:paddingBottom="@dimen/small_padding" />
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shop_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="true"
            app:gridData="@{shopViewModel.filteredItems}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
...
